# planetly_org_interview

./: .env  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/interview_app/: api.py  crud.py  main.py  models.py  schemas.py
backend/interview_app/core/: config.py  crud_base.py  deps.py
backend/interview_app/db/: session.py
backend/interview_app/db/data/: .~lock.GlobalLandTemperaturesByCity.csv#  load_data.py
backend/interview_app/migrations/: env.py
backend/interview_app/migrations/versions/: abdbbe173b41_.py  c0e8704ecc7d_.py
backend/tests/: conftest.py  test_example.py
